[package]
name = "grass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.26", features = ["json"]}
tokio = {version = "1", features = ["full"]}
serde_json = "1.0.115"
rand = "0.9.0-alpha.1"